infisical/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical-ingress
  annotations:
    # Jika kamu pakai Nginx Ingress Controller
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" # Penting buat upload file di Infisical
spec:
  ingressClassName: nginx
  rules:
  - host: "infisical.cluster.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Pastikan nama service ini sesuai dengan yang dibuat oleh Helm
            name: infisical-infisical-standalone-infisical 
            port:
              number: 8080
